<resources>
    <string name="app_name">Moeda Digital Miriti</string>
    <string name="site_app">MIRITI.COM</string>
    <string name="action_settings">Settings</string>
    <string name="action_share_text">Compartilhar Dados</string>
    <string name="action_PVTKEY_text">Chave Privada</string>
    <string name="action_share_pub_key">Gerar Link P2P</string>
    <string name="action_add_new_contact">Insert by ID</string>
    <string name="action_add_new_nft">Insert by Token</string>
    <string name="action_tranfer_nft">Transfer NFT</string>
    <string name="title_activity_coding">Codificando</string>
    <string name="title_contacts_list">My NFTs</string>
    <string name="title_TXID_list">MainID List</string>

    <string name="title_text_dec">CONTEÚDO:</string>
    <string name="title_text_enc">CRIPTOGRAMA:</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Home Screen -->
    <string name="Wallet">Chave não informada</string>
    <string name="CurrentBalance">Saldo Atual</string>
    <string name="BalanceValue">0,00 MRT</string>
    <string name="Key">Chave</string>
    <string name="Register">Registros</string>
    <string name="Send">Enviar</string>
    <string name="Welcome">Seja bem vindo!</string>

    <!-- Choose Key Input -->
    <string name="TitleCKI">Escolha uma entrada</string>
    <string name="DescriptionCKI">Como deseja informar a sua chave?</string>
    <string name="QrCodeInput">Qr Code</string>
    <string name="TypeInput">Digitar</string>

    <!-- Insert Key By Type -->
    <string name="TitleIKBT">Inserir a Chave</string>
    <string name="DescriptionIKBT">Digite a sua chave</string>
    <string name="KeyIKBT">Chave Hexadecimal</string>
    <string name="HelpTextIKBT">A chave deve ter 64 caracteres.</string>
    <string name="ButtonAccessIKBT">Acessar</string>
    <string name="ButtonUncompressedIKBT">Descompactado</string>

    <!-- Transfer Screen -->
    <string name="HintReceiverWallet">Carteira Destinatária</string>
    <string name="HintDescription">Descrição</string>
    <string name="HintValue">Valor (MRT)</string>
    <string name="InitialValue">0</string>
    <string name="TextWallet">Sua carteira:</string>
    <string name="TextCurrentBalance">Saldo Atual:</string>
    <string name="ButtonTransfer">Transferir</string>

    <!-- Alert Dialog Error Screen -->
    <string name="TitleError">oops!</string>
    <string name="DescriptionError">A chave é inválida.</string>
    <string name="TextButtonTryAgain">Tentar Novamente</string>
    <string name="TextButtonError">ok</string>

    <!-- Alert Dialog Success Screen -->
    <string name="TitleSuccess">sucesso!</string>
    <string name="DescriptionSuccess">Transferência concluída com êxito.</string>
    <string name="TextButtonSuccess">ok</string>
</resources>
