<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Token">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Red"
        app:liftOnScroll="true"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:outlineAmbientShadowColor="@color/Black"
            android:outlineSpotShadowColor="@color/Black"

            app:title="Transferir"
            app:titleTextColor="@color/White"
            app:titleCentered="true"

            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:navigationIconTint="@color/White"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/TextWallet"
                    android:textSize="@dimen/TextSizeSmaller" />

                <TextView
                    android:id="@+id/DisplayUserWallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/Wallet"
                    android:textSize="@dimen/TextSizeSmaller" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/TextCurrentBalance"
                    android:textSize="@dimen/TextSizeSmaller" />

                <TextView
                    android:id="@+id/DisplayCurrentBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/InitialValue"
                    android:textSize="@dimen/TextSizeSmaller" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/InputReceiverWalletLayout"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="24dp"

                android:hint="@string/HintReceiverWallet"
                android:textColorHint="#000"
                app:boxBackgroundColor="#F0F0F0"

                app:counterEnabled="true"
                app:counterMaxLength="34"
                app:endIconDrawable="@drawable/ic_baseline_qr_code_scanner_24"
                app:endIconMode="custom"
                app:endIconTintMode="src_in"
                app:errorEnabled="false"
                app:helperTextEnabled="false"
                app:hintTextAppearance="@style/TextAppearance.Material3.BodySmall">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/InputReceiverWallet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="text"
                    android:textSize="@dimen/TextSizeSmaller" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp"

                android:hint="@string/HintDescription"

                android:textColorHint="#000"
                app:boxBackgroundColor="#F0F0F0"
                app:counterEnabled="false"

                app:endIconMode="clear_text"
                app:endIconTintMode="src_in"
                app:errorEnabled="false"
                app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/InputDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="textShortMessage|textAutoCorrect|textMultiLine|textAutoComplete"
                    android:textSize="@dimen/TextSizeSmaller" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"

                android:hint="@string/HintValue"

                android:textColorHint="#000"
                app:boxBackgroundColor="#F0F0F0"
                app:counterEnabled="false"

                app:endIconMode="clear_text"
                app:endIconTintMode="src_in"
                app:errorEnabled="false"
                app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/InputValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="numberDecimal"
                    android:text="@string/InitialValue"
                    android:textSize="@dimen/TextSizeSmaller" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/ButtonTranfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ButtonTransfer"
                android:textAllCaps="true" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>