<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/BackgroundColor"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/TitleCKI"
        android:textSize="@dimen/TextSizeSmall" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/DescriptionCKI"
        android:textSize="@dimen/TextSizeSmaller" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Space
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:cardBackgroundColor="#F9F9F9"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="12dp">

            <LinearLayout
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <Button
                    android:id="@+id/BtnQrCode"
                    style="@style/Widget.App.Button.IconOnly.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha=".87"
                    android:backgroundTint="@color/Orange"
                    app:icon="@drawable/qrcode"
                    app:iconTint="@color/White"
                    app:iconTintMode="src_in" />

                <TextView
                    android:id="@+id/TitleQrCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:alpha=".87"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/QrCodeInput"
                    android:textColor="@color/TextColorDark"
                    android:textSize="@dimen/TextSizeSmaller" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:cardBackgroundColor="#F9F9F9"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="12dp">

            <LinearLayout
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <Button
                    android:id="@+id/BtnTypeInput"
                    style="@style/Widget.App.Button.IconOnly.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha=".87"
                    android:backgroundTint="@color/Orange"
                    app:icon="@drawable/keyboard"
                    app:iconTint="@color/White" />

                <TextView
                    android:id="@+id/TitleTypeInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:alpha=".87"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/TypeInput"
                    android:textColor="@color/TextColorDark"
                    android:textSize="@dimen/TextSizeSmaller" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>