<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TextAppearance.MyApp.TitleLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:orientation="vertical"
    tools:context=".MainBCAPP">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:backgroundTint="@color/Red"
                android:foregroundGravity="center"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="8dp"
                app:cardMaxElevation="12dp"
                app:circularflow_defaultRadius="12dp"
                app:contentPaddingTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="24dp"
                    android:paddingTop="0dp"
                    android:paddingRight="24dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="36dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:srcCompat="@mipmap/ic_launcher" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.MyApp.TitleLarge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/app_name"
                            android:textColor="@color/TextColorLight" />

                        <TextView
                            style="@style/TextAppearance.MyApp.TitleMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Welcome"
                            android:textColor="@color/TextColorLight" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="115dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/Orange"
                app:cardCornerRadius="24dp"
                app:cardElevation="8dp"
                app:cardMaxElevation="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:orientation="vertical"
                    android:paddingLeft="24dp"
                    android:paddingTop="20dp"
                    android:paddingRight="24dp"
                    android:paddingBottom="20dp">

                    <TextView
                        style="@style/TextAppearance.MyApp.TitleMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/TextCurrentBalance"
                        android:textColor="@color/TextColorLight" />

                    <TextView
                        android:id="@+id/TV_TEXT4"
                        style="@style/TextAppearance.MyApp.DisplaySmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/BalanceValue"
                        android:textColor="@color/TextColorLight" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:orientation="horizontal"
                        android:paddingTop="20dp"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/btReadKey"
                                style="@style/Widget.App.Button.IconOnly.Small"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:backgroundTint="#0DFFFFFF"
                                android:minHeight="48dp"
                                app:icon="@drawable/key"
                                app:iconSize="24dp"
                                app:iconTint="@color/White"
                                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                            <TextView
                                android:id="@+id/KeyTitle"
                                style="@style/TextAppearance.MyApp.LabelMedium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/Key"
                                android:textColor="@color/TextColorLight" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/btReadRegister"
                                style="@style/Widget.App.Button.IconOnly.Small"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:backgroundTint="#0DFFFFFF"
                                android:minHeight="48dp"
                                app:icon="@drawable/list"
                                app:iconSize="24dp"
                                app:iconTint="@color/White"
                                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                            <TextView
                                android:id="@+id/RegisterTitle"
                                style="@style/TextAppearance.MyApp.LabelMedium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/Register"
                                android:textColor="@color/TextColorLight" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/btTransfer"
                                style="@style/Widget.App.Button.IconOnly.Small"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:backgroundTint="#0DFFFFFF"
                                android:minHeight="48dp"
                                android:textColor="@color/TextColorLight"
                                app:icon="@drawable/send"
                                app:iconSize="24dp"
                                app:iconTint="@color/White"
                                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                            <TextView
                                android:id="@+id/titleSend"
                                style="@style/TextAppearance.MyApp.LabelMedium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/Send"
                                android:textColor="@color/TextColorLight" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.MyApp.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/QrCodeInput"
                        android:textFontWeight="600" />

                    <EditText
                        android:id="@+id/TV_TEXT3"
                        style="@style/TextAppearance.MyApp.BodyMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Wallet"
                        android:textColor="@color/TextColorDark"
                        android:background="@color/BackgroundColor"
                    />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    app:cardBackgroundColor="@color/OnBackgroundColor"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="8dp"
                    app:cardMaxElevation="12dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:id="@+id/ImageQrCode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/QrCodeInput" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>